# renux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bindings.py  constants.py  helpers.py  parser.py  project.py  pyproject.toml  requirements.txt  styles.tcss  test_project.py  ui.py
.github/workflows/: ci.yml  publish.yml  release-pypi.yml  release-testpypi.yml  release.yml
src/renux/: app.py  backup.py  bindings.py  cli.py  constants.py  helpers.py  parser.py  ui.py
src/renux/assets/: styles.tcss
src/renux/components/: form.py  preview.py
src/renux/helpers/: keywords.py
tests/: test_app.py  test_parser.py  test_renamer.py
