[project]
name = "renux"
version = "0.1.1"
description = "A terminal-based bulk file renamer with a TUI"
authors = [
    {name = "Andrian Lloyd Maagma", email = "maagmaandrian@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "python-slugify (>=8.0.4,<9.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "textual (>=3.3.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
renux = "renux.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
